# token-multi-sender

./: .gitignore  Cargo.toml  README.md
contracts/native-multisender/: Cargo.toml  NOTICE
contracts/native-multisender/examples/: schema.rs
contracts/native-multisender/schema/: execute_msg.json
contracts/native-multisender/src/: contract.rs  msg.rs  state.rs
